# lorsapp

./: CMakeLists.txt  CppProperties.json  README.md  getdb.cpp  getdb.h  handlers.cpp  handlers.h  main.cpp
CMakeProject1/: CMakeLists.txt
